--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,7 +6,7 @@
 @media screen and (min-width: 768px) {
   body,
   html {
-    background-image: url(bg-large.svg);
+    background-image: url(../public/bg-large.svg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -15,7 +15,7 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    background-size: cover; /* ajustar el tamaño del fondo para cubrir toda la pantalla */
+    background-size: cover; 
   }
 }
 
@@ -23,13 +23,12 @@
 @media screen and (max-width: 767px) {
   body,
   html {
-    background-image: url(bg-mobile.svg);
+    background-image: url(../public/bg-large.svg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-color: rgb(17 24 39 / 1);
     color: #fff;
-    /* ajustar el tamaño del fondo para cubrir toda la pantalla */
   }
 }
 
