--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,7 +6,7 @@
 @media screen and (min-width: 768px) {
   body,
   html {
-    background-image: url(../public/bg-large.svg);
+    background-image: url(/bg-large.svg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -23,7 +23,7 @@
 @media screen and (max-width: 767px) {
   body,
   html {
-    background-image: url(../public/bg-large.svg);
+    background-image: url(/bg-large.svg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
